Alignment fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,9 @@ header{
     height: 100%;
     z-index: 2
 }
+.mobile-links{
+    z-index:4;
+}
 .header-text{
     z-index: 4;
     margin-top: 30vh;
@@ -27,4 +30,17 @@ header{
 .tabs .tab a:focus, .tabs .tab a:focus.active{
     background: transparent;
 }
-
+/*Custom scrollbar*/
+body::-webkit-scrollbar {
+    width: 0.5em;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: #20784a;
+    outline: 1px solid slategrey;
+    border-radius: 20px;
+  }
